# devmlops

./: .gitignore  README.md  memo.md  profile.md
.github/workflows/: ci.yml  docker-build.yml  ecr-push.yml  ecs-deploy.yml  ml-cicd.yml  ml-deploy.yml
ch02-1/: .Dockerignore  Dockerfile  pyproject.toml
ch02-1/src/devmlops_ci/: calculator.py
ch02-1/tests/: test_calculator.py  test_main.py
ch02-2/: Dockerfile  pyproject.toml
ch02-2/src/devmlops_docker/: main.py
ch02-2/tests/: test_calculator.py
ch02-3/: task-definition.json
ch03-1/: .dockerignore  Dockerfile  pyproject.toml
ch03-1/src/devmlops_ml/: main.py  train.py
ch03-1/tests/: test_api.py  test_model_quality.py
ch03-3/: resolve_champion.py
