[project]
name = "devmlops-ci"
version = "0.1.0"
description = "FastAPI application for DevOps CI practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "fastapi>=0.110.0",
 "uvicorn>=0.28.0",
]
[project.optional-dependencies]
dev = [
 "pytest>=8.0.0",
 "ruff>=0.3.0",
 "httpx>=0.27.0",
]
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
[tool.ruff]
line-length = 88
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]